Mudado CSS dos labels de Login.

--- a/web/style.css
+++ b/web/style.css
@@ -94,6 +94,7 @@ p.success_msg {
     right:30px;
     padding:0;
     margin:0;
+    color:white;
     font-family:verdana;
     font-size:11px;
     text-align:right;
